# magus

./: .gitignore  .gitmodules  BUILDING  BUILDING.md  CMakeLists.txt  Doxyfile.in  Makefile.am  README.md  acinclude.m4  boot.sh  clean.sh  configure.ac  mk_builddir.sh  mkautogen  mkautogen.sh  modules
c++-srcs/: CMakeLists.txt
c++-srcs/dg/: CMakeLists.txt  DgEdge.h  DgMgr.cc  DgMgr.h  DgNode.cc  DgNode.h  NodeMark.cc  NodeMark.h  SupportList.cc  SupportList.h
c++-srcs/djdec/: CMakeLists.txt  DgEdge.h  DgMgr.cc  DgMgr.h  DgNode.cc  DgNode.h  DjDecomp.cc  DjDecomp.h  dg.h
c++-srcs/equiv/: Bdd2Aig.cc  Bdd2Aig.h  CMakeLists.txt  EquivMgr.cc  EquivMgr.h  Expr2Aig.cc  Expr2Aig.h  FraigEnc.cc  FraigEnc.h  FraigHandle.cc  FraigHandle.h  FraigHash.cc  FraigHash.h  FraigMgr.cc  FraigMgr.h  FraigMgrImpl.cc  FraigMgrImpl.h  FraigNode.cc  FraigNode.h  FraigSat.cc  FraigSat.h  PatHash.cc  PatHash.h  PatTable.h  StructHash.cc  StructHash.h  StructTable.h  Tv2Aig.cc  Tv2Aig.h  equiv_cmd.cc  equiv_module.cc  fraig_nsdef.h
c++-srcs/lua_magus/: CMakeLists.txt  LuaMagus.cc  LuaMagus.h  LuaMagus_Bdd.cc  LuaMagus_Bnet.cc  LuaMagus_equiv.cc  equiv_cmd.cc  lua_magus.cc
c++-srcs/magus_lua/: CMakeLists.txt  LuaMagus.cc  LuaMagus_Bnet.cc  LuaMagus_Clib.cc  magus_lua.cc
c++-srcs/py_magus/: CMakeLists.txt  magus_module.cc
c++-srcs/techmap/: CMakeLists.txt
c++-srcs/trusyn/: #trusyn.cc#  .#trusyn.cc  Cube.h  DgMgr.cc  DgMgr.h  DgNode.cc  DgNode.h  TruReader.h  prime_cover.cc  trusyn.cc  trusyn.h
doxygen-src/: CMakeLists.txt  Doxyfile.in  mainpage.h
include/: Bn2Sbj.h  CellMap.h  EquivMgr.h  LnGraph.h  LuaMagus.h  Luapp.h  LutMap.h  LutMap2.h  LutMap3.h  LutmapMgr.h  Makefile.am  SbjDff.h  SbjDumper.h  SbjEdge.h  SbjGraph.h  SbjHandle.h  SbjLatch.h  SbjNode.h  SbjPort.h  YmAlgo  YmCell  YmLogic  YmNetworks  YmTclpp  YmTools.h  YmTools.h.old  YmUtils  YmVerilog  Ymsh  acc_user.h  cec_nsdef.h  cellmap_nsdef.h  configure.ac  equiv.h  lutmap2_nsdef.h  lutmap3_nsdef.h  lutmap_nsdef.h  magus_nsdef.h  mainpage.h  sbj_nsdef.h  (+16 more)
include/YmCell/: Cell.h  CellArea.h  CellBundle.h  CellBus.h  CellBusType.h  CellCapacitance.h  CellClass.h  CellDotlibReader.h  CellFFInfo.h  CellGroup.h  CellLatchInfo.h  CellLatchPosArray.h  CellLibrary.h  CellLut.h  CellLutTemplate.h  CellMislibReader.h  CellPatGraph.h  CellPin.h  CellResistance.h  CellTime.h  CellTiming.h  cell_nsdef.h  pycell.h
include/YmLogic/: Aig.h  AigMgr.h  AigSatMgr.h  Bdd.h  BddDecomp.h  BddList.h  BddLitSet.h  BddMgr.h  BddVarSet.h  BddVector.h  Bool3.h  CNFdd.h  CNFddMgr.h  CvFunc.h  Dg.h  DgMgr.h  DimacsHandler.h  DimacsParser.h  DimacsVerifier.h  Expr.h  ExprWriter.h  Literal.h  NpnMap.h  NpnMapM.h  NpnMgr.h  NpnVmap.h  SatDimacsHandler.h  SatMsgHandler.h  SatMsgHandlerImpl1.h  SatSolver.h  SatStats.h  SmtFun.h  SmtFunValidator.h  SmtSolver.h  SmtSortInfo.h  SmtTerm.h  SmtVar.h  TvFunc.h  TvFuncM.h  VarId.h  (+14 more)
include/YmNetworks/: BNetBdnConv.h  BNetBlifReader.h  BNetBlifWriter.h  BNetDecomp.h  BNetEquWriter.h  BNetGateDecomp.h  BNetIscas89Reader.h  BNetManip.h  BNetSopDecomp.h  BNetVerilogWriter.h  BNetwork.h  BdnBlifReader.h  BdnBlifWriter.h  BdnConstNodeHandle.h  BdnDff.h  BdnDumper.h  BdnIscas89Reader.h  BdnLatch.h  BdnMgr.h  BdnNode.h  BdnNodeHandle.h  BdnPort.h  BdnVerilogWriter.h  BlifNetwork.h  BlifNode.h  CmnBlifWriter.h  CmnDff.h  CmnDffCell.h  CmnDumper.h  CmnEdge.h  CmnLatch.h  CmnLatchCell.h  CmnMgr.h  CmnNode.h  CmnPort.h  CmnVerilogWriter.h  MvnBdnConv.h  MvnBdnMap.h  MvnDumper.h  MvnInputPin.h  (+19 more)
include/YmTclpp/: Makefile.am  TclBase.h  TclCmd.h  TclHandler.h  TclObj.h  TclObjMsgHandler.h  TclPopt.h  TclVarTrace.h  tclpp_nsdef.h
include/YmUtils/: Alloc.h  Binder.h  BtgMatch.h  CodecType.h  CombiGen.h  DlList.h  File.h  FileIDO.h  FileInfo.h  FileLoc.h  FileODO.h  FileRegion.h  FragAlloc.h  GcSolver.h  GenBase.h  HeapTree.h  IDO.h  ItvlMgr.h  MFSet.h  MStopWatch.h  MinCov.h  MpInt.h  MsgHandler.h  MsgMgr.h  MultiCombiGen.h  MultiGenBase.h  MultiPermGen.h  MultiSetCombiGen.h  MultiSetGenBase.h  MultiSetPermGen.h  NameMgr.h  ODO.h  PermGen.h  PoptMainApp.h  RandCombiGen.h  RandGen.h  RandPermGen.h  RefCount.h  Scanner.h  ShString.h  (+13 more)
include/YmVerilog/: BitVector.h  VlLineWatcher.h  VlMgr.h  VlScalarVal.h  VlTime.h  VlUdpVal.h  VlValue.h  VlValueType.h  verilog.h
include/Ymsh/: Ymsh.h  YmshCmd.h  ymsh_nsdef.h
include/tclsh/: BNetCmd.h  MagCmd.h  MagMgr.h  NetHandle.h
libraries/libym_aig/: AigMgr.cc  AigMgrImpl.cc  AigMgrImpl.h  AigNode.cc  AigSatData.h  AigSatMgr.cc  AigTemplate.cc  AigTemplate.h  FraigHash.h  FraigMgr.cc  FraigMgrImpl.cc  FraigMgrImpl.h  FraigNode.cc  FraigNode.h  FraigSig.h  LrMgr.cc  LrMgr.h  LrMgr_init_table.cc  Makefile.am  configure.ac
libraries/libym_algo/: CMakeLists.txt
libraries/libym_bdd/: Makefile.am  configure.ac
libraries/libym_blif/: BlifDic.cc  BlifDic.h  BlifHandler.cc  BlifNetworkReader.cc  BlifParser.cc  BlifParserImpl.cc  BlifParserImpl.h  BlifScanner.cc  BlifScanner.h  IdHash.cc  IdHash.h  Makefile.am  configure.ac
libraries/libym_bnet/: BNetBlifWriter.cc  BNetDecomp.cc  BNetEquWriter.cc  BNetGateDecomp.cc  BNetIscas89Reader.cc  BNetManip.cc  BNetSopDecomp.cc  BNetVerilogWriter.cc  BNetwork.cc  BNode.cc  BNodeMgr.cc  BNodeMgr.h  BlifBNetConv.cc  Makefile.am  StrBNodeMap.cc  StrBNodeMap.h  configure.ac  eliminate.cc
libraries/libym_bnetbdnconv/: BNetBdnConv.cc  Makefile.am  configure.ac
libraries/libym_bnetblifreader/: BNetBlifHandler.cc  BNetBlifReader.cc  Makefile.am  configure.ac
libraries/libym_bnetiscas89reader/: BNetIscas89Handler.cc  (+3 more)
magus_core/: CMakeLists.txt
magus_lua/: CMakeLists.txt  LuaMagus.cc  LuaMagus_Bnet.cc  LuaMagus_Clib.cc  equiv_cmd.cc  magus_lua.cc
magus_tclsh/: CMakeLists.txt  magus_init.cc  tclAppInit.cc
programs/: Makefile.am
py_magus/: CMakeLists.txt  PyBase.h  PyMt19937.cc  PyMt19937.h  magus_module.cc  py_magus.cc
tests/: CMakeLists.txt  Makefile.am  configure.ac  libym_cec  libym_cell  libym_gds  libym_logic  libym_mincov  libym_networks  libym_seal  libym_smtlibv2  libym_tclpp  libym_techmap  libym_utils  libym_verilog  libym_ymsh
(+11091 files in other folders)
